--- a/ConsoleApplication1/ConsoleApplication.csproj
+++ b/ConsoleApplication1/ConsoleApplication.csproj
@@ -48,7 +48,7 @@
     <Compile Include="BotFlange.cs" />
     <Compile Include="CompositeBeam.cs" />
     <Compile Include="CompositeRectangle.cs" />
-    <Compile Include="Rectangle.cs" />
+    <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slab.cs" />
