--- a/ConsoleApplication1/ConsoleApplication.csproj
+++ b/ConsoleApplication1/ConsoleApplication.csproj
@@ -50,6 +50,7 @@
     <Compile Include="CompositeRectangle.cs" />
     <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
+    <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Slab.cs" />
     <Compile Include="TopFlange.cs" />
