--- a/ConsoleApplication1/ConsoleApplication.csproj
+++ b/ConsoleApplication1/ConsoleApplication.csproj
@@ -46,12 +46,14 @@
     <Compile Include="BeamParts.cs" />
     <Compile Include="Bolster.cs" />
     <Compile Include="BotFlange.cs" />
+    <Compile Include="Class1.cs" />
     <Compile Include="CompositeBeam.cs" />
     <Compile Include="CompositeRectangle.cs" />
     <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Reinforcing.cs" />
     <Compile Include="Slab.cs" />
     <Compile Include="TopFlange.cs" />
     <Compile Include="Web.cs" />
