--- a/ConsoleApplication1/ConsoleApplication.csproj
+++ b/ConsoleApplication1/ConsoleApplication.csproj
@@ -49,9 +49,10 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CompositeBeam.cs" />
     <Compile Include="CompositeRectangle.cs" />
+    <Compile Include="PlasticProps.cs" />
     <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
-    <Compile Include="Properties.cs" />
+    <Compile Include="ElasticProps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Reinforcing.cs" />
     <Compile Include="Slab.cs" />
