--- a/ConsoleApplication1/ConsoleApplication.csproj
+++ b/ConsoleApplication1/ConsoleApplication.csproj
@@ -49,11 +49,13 @@
     <Compile Include="Class1.cs" />
     <Compile Include="CompositeBeam.cs" />
     <Compile Include="CompositeRectangle.cs" />
+    <Compile Include="Material.cs" />
     <Compile Include="PlasticProps.cs" />
     <Compile Include="Plate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="ElasticProps.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReinforcedConcrete.cs" />
     <Compile Include="Reinforcing.cs" />
     <Compile Include="Slab.cs" />
     <Compile Include="TopFlange.cs" />
